# streaming_realtime_similarity

./: .gitignore  README.md  pyproject.toml
configs/: dev.json
data/: reference.csv  stream_sample.csv
src/: cli.py  config.py  evaluate.py  ingestion.py  persist.py  scoring.py  vectorize.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
streaming_realtime_similarity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_evaluate.py  test_smoke_run.py
